--- a/.dev/sass/partials/_social.scss
+++ b/.dev/sass/partials/_social.scss
@@ -87,6 +87,7 @@
 header .social-menu {
 	@extend .clearfix;
 	margin-top: 10px;
+	margin-bottom: 20px;
 	li {
 		margin: 0;
 		padding-bottom: 7px;
