--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -25,9 +25,10 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 
 .footer-widget-area {
 	overflow: hidden;
-	padding: 2.5rem 1.2rem;
-	@media screen and (min-width: 769px) {
+	padding: 4.7rem 4.7rem;
+	@media screen and (min-width: 2000px) {
 		padding: 4.6rem 4.6rem 2.25rem;
+		max-width: 66.6666666667%;
 	}
 
 	&.columns-1 {
@@ -73,7 +74,7 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		}
 
 		@media #{$large-up} {
-			margin-right: 5%;
+			margin-right: 3%;
 			float: left;
 		}
 
