--- a/.dev/sass/partials/_typography.scss
+++ b/.dev/sass/partials/_typography.scss
@@ -8,7 +8,7 @@ $include-html-type-classes: $include-html-classes !default;
 
 // We use these to control header font styles
 $header-font-family: $body-font-family !default;
-$header-font-weight: $font-weight-bold !default;
+$header-font-weight: 300 !default;
 $header-font-style: $font-weight-bold !default;
 $header-font-color: #222 !default;
 $header-line-height: 1.4 !default;
