--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -1,6 +1,6 @@
 $entry-title-bg: rgba(0,0,0,.6) !default;
 
-.site-header {
+.site-header[style] {
 	height: 100%;
 	max-height: 600px;
 	@include clearfix;
@@ -121,6 +121,7 @@ $entry-title-bg: rgba(0,0,0,.6) !default;
 @media all and ( min-width: 600px ){
 	.hero-widget {
 		color: #fff;
+		padding: 7rem 4.4375rem 0;
 		h2.widget-title {
 			color: #fff;
 			font-size: 3.5em;
